Less idiotic main menu. Fix too much comment.

--- a/web/foldwithme-ui/src/app/main-menu/main-menu.component.scss
+++ b/web/foldwithme-ui/src/app/main-menu/main-menu.component.scss
@@ -6,3 +6,7 @@ button {
     width: 40px;
     height: 40px;
 }
+
+.mat-raised-button {
+    vertical-align: middle;
+}
